--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "sayhello": "./index.js"
+  },
   "scripts": {},
   "keywords": [],
   "author": "",
